[gd_scene load_steps=30 format=3 uid="uid://dqxk4euww1ne6"]

[ext_resource type="PackedScene" uid="uid://b87rmwfp3t0q3" path="res://assets/decurse.glb" id="1_pn7l6"]
[ext_resource type="Script" path="res://src/levels/DecurseRoom.gd" id="2_peqwh"]
[ext_resource type="Material" uid="uid://bjc1h1pmxe4du" path="res://assets/textures/marbletiles.material" id="3_8t4dy"]
[ext_resource type="Material" uid="uid://davtjw50v0lnl" path="res://assets/textures/cautionmetal.material" id="3_j8pya"]
[ext_resource type="PackedScene" uid="uid://cant0y3v6awlb" path="res://src/Door.tscn" id="3_nraie"]
[ext_resource type="Material" uid="uid://cwaxspm62tnnx" path="res://assets/textures/metalplate.material" id="4_i0f44"]
[ext_resource type="Material" uid="uid://bn6rre8knl5t1" path="res://assets/textures/planks.material" id="4_la6s8"]
[ext_resource type="Material" uid="uid://bgcwx1ifw28qr" path="res://assets/textures/matteblack.material" id="5_g6ylq"]
[ext_resource type="Material" uid="uid://djb786lmy5rof" path="res://assets/textures/corrogated.material" id="5_kexdf"]
[ext_resource type="Material" uid="uid://c7osqxo2jj3c5" path="res://assets/textures/plaster.material" id="7_46s88"]
[ext_resource type="Material" uid="uid://dubi1sbrbreom" path="res://assets/textures/gold.tres" id="8_6ipj4"]
[ext_resource type="Texture2D" uid="uid://6q8qv8g0at0l" path="res://assets/textures/Plaster003_1K-JPG/Plaster003_1K-JPG_Color.jpg" id="9_dy401"]
[ext_resource type="Texture2D" uid="uid://dstusxdu0u8gi" path="res://assets/textures/Plaster003_1K-JPG/Plaster003_1K-JPG_Displacement.jpg" id="10_clemy"]
[ext_resource type="Texture2D" uid="uid://mhplqqt0uk8w" path="res://assets/textures/Plaster003_1K-JPG/Plaster003_1K-JPG_NormalGL.jpg" id="11_lir6e"]
[ext_resource type="Texture2D" uid="uid://ccjr58u7vxtmt" path="res://assets/textures/Plaster003_1K-JPG/Plaster003_1K-JPG_Roughness.jpg" id="12_wlgsc"]
[ext_resource type="FontFile" uid="uid://bxwxor4eohja1" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="16_mwx82"]
[ext_resource type="PackedScene" uid="uid://ctalbj8qktb7m" path="res://src/Cutscene.tscn" id="17_2urrc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lmfja"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_go7q7"]
sky_material = SubResource("ProceduralSkyMaterial_lmfja")

[sub_resource type="Environment" id="Environment_hxb2w"]
background_mode = 1
sky = SubResource("Sky_go7q7")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 3
ssr_enabled = true
ssao_enabled = true
glow_enabled = true
glow_bloom = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ilruj"]
size = Vector3(167.286, 1, 131.773)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u4ndr"]
albedo_texture = ExtResource("9_dy401")
metallic_specular = 0.2
roughness_texture = ExtResource("12_wlgsc")
roughness_texture_channel = 4
normal_enabled = true
normal_texture = ExtResource("11_lir6e")
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
heightmap_texture = ExtResource("10_clemy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_on2po"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0.741176, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oqikd"]
radius = 2.23903

[sub_resource type="BoxShape3D" id="BoxShape3D_vdsg4"]
size = Vector3(4.1398, 3.30085, 3.19805)

[sub_resource type="Curve3D" id="Curve3D_8i754"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 4.69907, -7.3767, 15.7458, 3.76852, -0.657733, 2.17984, -3.76852, 0.657733, -2.17984, 0.748989, -6.09924, 11.6627, -1.21115, 0.715081, 4.08967, 1.21115, -0.715081, -4.08967, -13.279, -5.70349, 6.74867),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3
up_vector_enabled = false

[sub_resource type="Animation" id="Animation_6rcjj"]
resource_name = "wiggle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cylinder_001:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.36711, 2.2695, -0.0870376), Vector3(-3.36711, 2.61948, -0.431024)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube_003:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.018278, 0.0178875, -0.0235006)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("decursor:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.35625, 0), Vector3(0.13464, 2.48578, 0.0392013)]
}

[sub_resource type="Animation" id="Animation_ksr7o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cylinder_001:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.36711, 2.2695, -0.0870376)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube_003:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("decursor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.35625, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_386lr"]
_data = {
"RESET": SubResource("Animation_ksr7o"),
"wiggle": SubResource("Animation_6rcjj")
}

[node name="decurse" instance=ExtResource("1_pn7l6")]
script = ExtResource("2_peqwh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]
environment = SubResource("Environment_hxb2w")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="1"]
transform = Transform3D(-0.952128, -0.264744, 0.152849, 0, 0.499998, 0.866027, -0.305699, 0.824568, -0.476062, 0, 0, 0)
shadow_enabled = true

[node name="decursor" parent="." index="2"]
surface_material_override/0 = ExtResource("3_j8pya")

[node name="Cylinder" parent="." index="3"]
visible = false

[node name="Cube_001" parent="." index="4"]
surface_material_override/0 = ExtResource("3_8t4dy")

[node name="display" parent="." index="5"]
surface_material_override/0 = ExtResource("5_g6ylq")

[node name="Cube_003" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.70613, 2.2695, -0.0870376)
surface_material_override/0 = ExtResource("5_kexdf")

[node name="Cylinder_001" parent="." index="7"]
surface_material_override/0 = ExtResource("4_i0f44")

[node name="Cube_004" parent="." index="8"]
surface_material_override/0 = ExtResource("4_i0f44")

[node name="Cube_005" parent="." index="9"]
surface_material_override/0 = ExtResource("4_la6s8")

[node name="Cube_006" parent="." index="10"]
surface_material_override/0 = ExtResource("4_i0f44")

[node name="Cube_007" parent="." index="11"]
surface_material_override/0 = ExtResource("4_la6s8")

[node name="Spawns" type="Node3D" parent="." index="12"]

[node name="Marker3D" type="Marker3D" parent="Spawns" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0868576, 15.5373)

[node name="Killplane" type="Area3D" parent="." index="13"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Killplane" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.31298, 0)
shape = SubResource("BoxShape3D_ilruj")

[node name="ReflectionProbe" type="ReflectionProbe" parent="." index="14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.14473, 6.03394)
max_distance = 30.0
size = Vector3(24.6554, 18.8164, 24.3507)
origin_offset = Vector3(0, -5.94531, 0)
box_projection = true
interior = true
enable_shadows = true

[node name="Door" parent="." index="15" instance=ExtResource("3_nraie")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 17.6752)
level_idx_to_load = 6
spawn_idx = 4

[node name="Cube" parent="." index="16"]
surface_material_override/0 = SubResource("StandardMaterial3D_u4ndr")

[node name="Cube_001_001" parent="." index="17"]
surface_material_override/0 = ExtResource("7_46s88")

[node name="Cube_002" parent="." index="18"]
surface_material_override/0 = ExtResource("8_6ipj4")

[node name="Cube_007_001" parent="." index="20"]
surface_material_override/0 = SubResource("StandardMaterial3D_on2po")

[node name="Cube_007_002" parent="." index="21"]
surface_material_override/0 = ExtResource("4_la6s8")

[node name="SpotLight3D" type="SpotLight3D" parent="." index="22"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 14.9793, 7.65539)
shadow_enabled = true
spot_range = 27.7627
spot_angle = 37.2001

[node name="SpotLight3D2" type="SpotLight3D" parent="." index="23"]
transform = Transform3D(0.975306, -0.172359, 0.138095, -0.0360821, 0.492517, 0.869555, -0.217889, -0.853065, 0.474136, -4.12652, 6.98667, 4.7831)
shadow_enabled = true
spot_range = 13.8182
spot_angle = 53.6257

[node name="SpotLight3D3" type="SpotLight3D" parent="." index="24"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 4.84435, 11.014, -0.146942)
shadow_enabled = true
spot_range = 8.28497
spot_angle = 47.6489

[node name="SpotLight3D4" type="SpotLight3D" parent="." index="25"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.177848, 6.53652, 16.1918)
shadow_enabled = true
spot_range = 8.18686
spot_angle = 34.5705

[node name="SpotLight3D5" type="SpotLight3D" parent="." index="26"]
transform = Transform3D(1, 0, 0, 0, 0.332457, 0.943118, 0, -0.943118, 0.332457, 6.19199, 5.77156, 12.5545)
shadow_enabled = true
spot_range = 8.18686
spot_angle = 29.0285

[node name="ExitPoint" type="Marker3D" parent="." index="27"]
transform = Transform3D(-0.999992, 0, 0.00389199, 0, 1, 0, -0.00389199, 0, -0.999992, -6.76001, 0.0720499, 2.87426)

[node name="DepositArea" type="Area3D" parent="." index="28"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.93762, 3.89266)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DepositArea" index="0"]
shape = SubResource("CylinderShape3D_oqikd")

[node name="MachineArea" type="Area3D" parent="." index="29"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.03516, -0.516512)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MachineArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.253698, 0)
shape = SubResource("BoxShape3D_vdsg4")

[node name="PowerLabel" type="Label3D" parent="." index="30"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.8024, 2.47972)
modulate = Color(1, 1, 0, 1)
text = "POWER ORBS: 0/3"
font = ExtResource("16_mwx82")
font_size = 77

[node name="Cutscene" parent="." index="31" instance=ExtResource("17_2urrc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.17091, 7.85935, 0)
curve = SubResource("Curve3D_8i754")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="33"]
libraries = {
"": SubResource("AnimationLibrary_386lr")
}

[connection signal="body_entered" from="DepositArea" to="." method="_on_deposit_area_body_entered" flags=18]
[connection signal="body_exited" from="DepositArea" to="." method="_on_deposit_area_body_exited" flags=18]
[connection signal="body_entered" from="MachineArea" to="." method="_on_machine_area_body_entered" flags=18]
